@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.2-4
-Date: 2016-01-26
+Date: 2016-02-20
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
